fix logo alignment

--- a/clients/invelopnow/css/style.css
+++ b/clients/invelopnow/css/style.css
@@ -1599,7 +1599,7 @@ header {
     header {
       height: 110px;
       position: fixed; }
-      header header .nav-logo {
+      header .nav-logo {
         display: inline;
         float: left;
         width: 47.9166666667%;
